# dtp_support

./: .gitignore  7字取りルール.txt  README.md  app.py  dtp_supportプロジェクト.md  pattern5.py  pattern7.py  pyproject.toml  requirements.txt  run_tests.py  sample_namelist.csv  sample_namelist.txt  sample_namelist.xlsx  sample_surnames.txt  test_app.py  test_name_formatting.py  整形済み_sample_namelist.csv  苗字リスト.txt
docs/: 5字取りルール.txt  formatting_rules.md
tests/: test_logic.py
