[project]
name = "dtp-support"
version = "0.1.0"
description = "日本語DTP字取りツール"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.32.0",
    "pandas>=2.1.4",
    "numpy>=1.26.3",
    "openpyxl>=3.1.2",
    "xlrd>=2.0.1",
]

[tool.ruff]
# 除外するディレクトリ
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

# 1行の最大長
line-length = 88
indent-width = 4

target-version = "py311"

[tool.ruff.lint]
# 有効にするルール
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []

# fix可能なルールの自動修正を有効化
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
